@@ -10,8 +10,9 @@ inherit webapp  eutils
 
 DESCRIPTION="A complete CRM and groupware system for businesses of all sizes."
 HOMEPAGE="http://www.sugarforge.org/"
-SRC_URI="mirror://sourceforge/sugarcrm/1%20-%20SugarCRM%205.5.1/SugarCommunityEdition-5.5.1/SugarCE-5.5.1RC3.zip"
+#SRC_URI="mirror://sourceforge/project/${PN}/1%20-%20${MY_PN}%20${PV}/SugarCommunityEdition-${PV}/${MY_PN}-${PV}.zip"
 
+SRC_URI="http://dl.sugarforge.org/${PN}/1${MY_PN}${PV}GA/${MY_PN}${PV}GA/${MY_PN}-${PV}.zip"
 LICENSE="GPL-3"
 KEYWORDS="~amd64 ~x86"
 IUSE="curl imap +json +zlib +mysql +mysqli freetds ldap mssql"
@@ -29,7 +30,7 @@ DEPEND=">=dev-lang/php-5.2.10[ssl,soap,unicode,xml,session,tokenizer,ldap?,mssql
 
 RDEPEND="${DEPEND}"
 
-S="${WORKDIR}/${MY_PN}-Full-5.5.1RC3"
+S="${WORKDIR}/${MY_PN}-Full-${PV}"
 
 src_install () {
 
