@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sugarcrm-5.5.1 ( 28 Mar 2010 )
+
+  28 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  -sugarcrm-5.5.1_rc3.ebuild, +sugarcrm-5.5.1.ebuild:
+  bump
+
 *sugarcrm-5.5.1_rc3 ( 18 Mar 2010 )
 
   18 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru>
